doucumentation listeCollecte pour un donateur
